--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   googleapis: ^9.2.0
   googleapis_auth: ^1.3.1
   http: ^0.13.5
+  record_windows: ^0.7.1
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
