--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   googleapis_auth: ^1.3.1
   http: ^0.13.5
   record_windows: ^0.7.1
+  record_macos: ^0.2.2
   path: ^1.8.2
 
 dev_dependencies:
