--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,14 +42,14 @@ dependencies:
   objectbox: ^1.7.0
   objectbox_sync_flutter_libs: any
   intl: any
-  record: ^4.4.4
   path_provider: ^2.0.11
   googleapis: ^9.2.0
   googleapis_auth: ^1.3.1
-  http: ^0.13.5
+  record: ^4.4.4
   record_windows: ^0.7.1
   record_macos: ^0.2.2
-  path: ^1.8.2
+  permission_handler: ^10.2.0
+  permission_handler_windows: ^0.1.2
 
 dev_dependencies:
   flutter_test:
