--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   record_macos: ^0.2.2
   permission_handler: ^10.2.0
   permission_handler_windows: ^0.1.2
+  flutter_launcher_icons: ^0.11.0
+  starflut: ^0.9.5
+  flython: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +37,16 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   objectbox_generator: any
+
+
+flutter_icons:
+  windows:
+    generate: true
+    image_path: "assets/images/logo.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/logo.png"
 
 flutter:
   uses-material-design: true
