--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,6 @@ dependencies:
   permission_handler: ^10.2.0
   permission_handler_windows: ^0.1.2
   flutter_launcher_icons: ^0.11.0
-  starflut: ^0.9.5
-  flython: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +51,7 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/.keys/
+    - keys/
 
   fonts:
     - family: Roboto
